--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Binaural Beat Generator",
-    "short_name": "BBG",
+    "short_name": "Binaural Beats",
     "description": "Binaural Beat Generator",
     "start_url": "/",
     "background_color": "#000000",
